--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "copy-webpack-plugin": "^4.6.0",
+    "core-js": "^3.0.0",
     "css-loader": "^2.1.0",
     "eslint": "^5.12.1",
     "eslint-loader": "^2.1.1",
@@ -33,6 +34,7 @@
     "hard-source-webpack-plugin": "^0.13.1",
     "imagemin-webpack-plugin": "^2.4.0",
     "import-glob-loader": "^1.1.0",
+    "imports-loader": "^0.8.0",
     "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "pug": "^2.0.3",
