--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
+    "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^4.6.0",
     "core-js": "^3.0.0",
     "css-loader": "^2.1.0",
