--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev-network": "webpack-dev-server --config ./build/webpack.config.js --progress --open --host 0.0.0.0",
-    "dev": "webpack-dev-server --progress --no-info --config ./build/webpack.config.js --env.NODE_ENV=development",
+    "dev": "nodemon --watch ./build/webpack.config.js --watch ./src/template/pugData.js --exec \"webpack-dev-server --progress --no-info --config ./build/webpack.config.js --env.NODE_ENV=development\"",
     "prod": "webpack --config ./build/webpack.config.js --env.NODE_ENV=production --aot=false -p --progress",
     "watch": "webpack --watch --config ./build/webpack.config.js --env.NODE_ENV=production"
   },
@@ -68,6 +68,7 @@
   },
   "dependencies": {
     "inputmask": "^4.0.6",
+    "nodemon": "^1.18.10",
     "pug-html-loader": "^1.1.5"
   }
 }
