--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,6 @@
 {
   "rules": {
-    "block-no-empty": true,
+    "block-no-empty": null,
     "color-no-invalid-hex": true,
     "comment-no-empty": true,
     "declaration-block-no-duplicate-properties": [
