--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
 	"main": "app.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon --watch ./build/webpack.config.js --watch ./src/templates/pugData.js --exec \"webpack-dev-server --progress --no-info --config ./build/webpack.config.js --env.NODE_ENV=development\"",
-		"prod": "webpack --config ./build/webpack.config.js --env.NODE_ENV=production --aot=false -p --progress",
-		"watch": "webpack --watch --config ./build/webpack.config.js --env.NODE_ENV=production"
+		"dev": "nodemon --watch ./webpack.config.js --watch ./src/templates/pugData.js --exec \"webpack-dev-server --progress --no-info --config ./webpack.config.js --env.NODE_ENV=development\"",
+		"prod": "webpack --config ./webpack.config.js --env.NODE_ENV=production --aot=false -p --progress",
+		"watch": "webpack --watch --config ./webpack.config.js --env.NODE_ENV=production"
 	},
 	"author": "Denys Volynets",
 	"license": "ISC",
