--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
 		"stylelint-config-standard": "^18.2.0",
 		"stylelint-scss": "^3.5.1",
 		"stylelint-webpack-plugin": "^0.10.5",
-		"svg-sprite-loader": "^4.1.3",
 		"svg4everybody": "^2.1.9",
+		"svgo": "^1.2.2",
+		"svgo-loader": "^2.2.0",
+		"external-svg-sprite-loader": "^4.0.2",
 		"url-loader": "^1.1.2",
 		"webpack": "^4.28.4",
 		"webpack-build-notifier": "^0.1.30",
